--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/username/project.git"
+    "url": "git@github.com:rafaelfernandesnet/fit-util.git"
+  },
+  "devDependencies": {
+    "underscore": "~1.8.3",
+    "angular": "~1.4.2",
+    "angular-mocks": "~1.4.2"
   }
 }
